// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`场景 1 · 启动（空态） **新会话，不接续**——空手打开没有会话，状态行报「新会话」 1`] = `
"
  █   █  ███   ████ ███  ████    ████  ███  ████  █████
  ██ ██ █   █ █      █  █       █     █   █ █   █ █
  █ █ █ █████ █ ███  █  █       █     █   █ █   █ ████
  █   █ █   █ █   █  █  █       █     █   █ █   █ █
  █   █ █   █  ███  ███  ████    ████  ███  ████  █████

────────────────────────────────────────────────────────────────────────────────────────────────────
 › 交代一件事，回车发送
────────────────────────────────────────────────────────────────────────────────────────────────────
 ○ 空闲 · 新会话                                                               / 命令 · ctrl+c 退出"
`;

exports[`场景 2 · 空闲（有历史） 三类行各就其位 ＋ 状态行四格 1`] = `
"
  █   █  ███   ████ ███  ████    ████  ███  ████  █████
  ██ ██ █   █ █      █  █       █     █   █ █   █ █
  █ █ █ █████ █ ███  █  █       █     █   █ █   █ ████
  █   █ █   █ █   █  █  █       █     █   █ █   █ █
  █   █ █   █  ███  ███  ████    ████  ███  ████  █████

› 看看这个工作区里有什么

⏺ 我先列一下。

● ls {"path":"."}
  ✓ 200ms · 14 项

⏺ 是个 Bun 工作区，packages 下六个包。
────────────────────────────────────────────────────────────────────────────────────────────────────
 › 交代一件事，回车发送
────────────────────────────────────────────────────────────────────────────────────────────────────
 ○ 空闲 · 记录查询优化 · MiniMax-M3 · 3.1k                                     / 命令 · ctrl+c 退出"
`;

exports[`场景 3 · 工作中（流式） 工具在跑——标记换 \`⟳\`；**没有钟**就回退「运行中」（不编秒数）；输入行说实话；右位报中断 1`] = `
"
  █   █  ███   ████ ███  ████    ████  ███  ████  █████
  ██ ██ █   █ █      █  █       █     █   █ █   █ █
  █ █ █ █████ █ ███  █  █       █     █   █ █   █ ████
  █   █ █   █ █   █  █  █       █     █   █ █   █ █
  █   █ █   █  ███  ███  ████    ████  ███  ████  █████

› 把 src/utils/date.ts 的时区处理改成本地时区

⏺ 先读一遍，看清它现在怎么算的——

⟳ read {"path":"src/utils/date.ts"}
  ⟳ 运行中
────────────────────────────────────────────────────────────────────────────────────────────────────
 › （工作中——想插话可以打，发不出去就排队）
────────────────────────────────────────────────────────────────────────────────────────────────────
 ● 工作中 · 时区修正 · MiniMax-M3                                                       ctrl+c 中断"
`;

exports[`场景 4 · 待裁决（轻） 黄线 ＋ 材料内联 ＋ 三键（含 \`a\`）；接管态**不画输入行**（D29） 1`] = `
"
  █   █  ███   ████ ███  ████    ████  ███  ████  █████
  ██ ██ █   █ █      █  █       █     █   █ █   █ █
  █ █ █ █████ █ ███  █  █       █     █   █ █   █ ████
  █   █ █   █ █   █  █  █       █     █   █ █   █ █
  █   █ █   █  ███  ███  ████    ████  ███  ████  █████

› 跑一下测试看看现在什么情况

⏺ 要跑 bun test——这条命令没配过规则，请一下。
────────────────────────────────────────────────────────────────────────────────────────────────────

 │ exec · 可逆
 │ 命令 bun test · 只读（不写工作区）
 │ y 批准　a 本工作区总是允许　n 拒绝
────────────────────────────────────────────────────────────────────────────────────────────────────
 ● 等你定夺 · 记录查询优化                                                                y / a / n"
`;

exports[`场景 5 · 待裁决（重） 红线 ＋ **\`a\` 划掉**（不是藏起来）；右位只剩 \`y / n\` 1`] = `
"
  █   █  ███   ████ ███  ████    ████  ███  ████  █████
  ██ ██ █   █ █      █  █       █     █   █ █   █ █
  █ █ █ █████ █ ███  █  █       █     █   █ █   █ ████
  █   █ █   █ █   █  █  █       █     █   █ █   █ █
  █   █ █   █  ███  ███  ████    ████  ███  ████  █████

› 把 user_version 抬到 1，旧库的迁移也补上
────────────────────────────────────────────────────────────────────────────────────────────────────

 │ write · 不可逆
 │ 目标 src/records/db.ts · 影响面 覆盖已有文件（132 行将变）
 │ - const v = 0
 │ + const v = 1
 │ y 批准　a 本工作区总是允许　n 拒绝
────────────────────────────────────────────────────────────────────────────────────────────────────
 ● 等你定夺 · 时区修正                                                                        y / n"
`;

exports[`场景 6 · 接管 · 按了非答复键 忽略但**当场说一句**（\`▲ …\`）；其余照旧 1`] = `
"
  █   █  ███   ████ ███  ████    ████  ███  ████  █████
  ██ ██ █   █ █      █  █       █     █   █ █   █ █
  █ █ █ █████ █ ███  █  █       █     █   █ █   █ ████
  █   █ █   █ █   █  █  █       █     █   █ █   █ █
  █   █ █   █  ███  ███  ████    ████  ███  ████  █████

────────────────────────────────────────────────────────────────────────────────────────────────────

 │ write · 不可逆
 │ 覆盖 src/records/db.ts
 │ y 批准　a 本工作区总是允许　n 拒绝
▲ 先答复——「x」此刻不管用（这一轮在等你）。草稿在，答完接着打。
────────────────────────────────────────────────────────────────────────────────────────────────────
 ● 等你定夺 · 记录查询优化                                                                    y / n"
`;

exports[`场景 7 · 多件裁决 件数报**两处**：卡的标题 \`2 / 3\` 与状态行 \`2/3\` 1`] = `
"
  █   █  ███   ████ ███  ████    ████  ███  ████  █████
  ██ ██ █   █ █      █  █       █     █   █ █   █ █
  █ █ █ █████ █ ███  █  █       █     █   █ █   █ ████
  █   █ █   █ █   █  █  █       █     █   █ █   █ █
  █   █ █   █  ███  ███  ████    ████  ███  ████  █████

⟳ write a
  ⟳ 运行中
⟳ write b
⟳ write c
  ⟳ 运行中
────────────────────────────────────────────────────────────────────────────────────────────────────

 │ write · 可逆 · 2 / 3
 │ 目标 README.md · 影响面 覆盖（新增 12 行）
 │ y 批准　a 本工作区总是允许　n 拒绝
────────────────────────────────────────────────────────────────────────────────────────────────────
 ● 等你定夺 2/3 · 时区修正                                                                y / a / n"
`;

exports[`场景 8 · 答完之后 回执一行 · 下一件接上 · 草稿归还（不自动发送） 1`] = `
"
  █   █  ███   ████ ███  ████    ████  ███  ████  █████
  ██ ██ █   █ █      █  █       █     █   █ █   █ █
  █ █ █ █████ █ ███  █  █       █     █   █ █   █ ████
  █   █ █   █ █   █  █  █       █     █   █ █   █ █
  █   █ █   █  ███  ███  ████    ████  ███  ████  █████

● write src/records/db.ts
  ✓ 181ms · 写好了
⟳ write README.md
────────────────────────────────────────────────────────────────────────────────────────────────────

 │ write · 可逆 · 2 / 2
 │ 目标 README.md
 │ y 批准　a 本工作区总是允许　n 拒绝
────────────────────────────────────────────────────────────────────────────────────────────────────
 ● 等你定夺 2/2 · 时区修正                                                                y / a / n"
`;

exports[`场景 9 · \`/resume\`（交互配置型） 回车**不进记录区**，只在左下开选择器；列表带当前位与说明 1`] = `
"
  █   █  ███   ████ ███  ████    ████  ███  ████  █████
  ██ ██ █   █ █      █  █       █     █   █ █   █ █
  █ █ █ █████ █ ███  █  █       █     █   █ █   █ ████
  █   █ █   █ █   █  █  █       █     █   █ █   █ █
  █   █ █   █  ███  ███  ████    ████  ███  ████  █████

────────────────────────────────────────────────────────────────────────────────────────────────────
 　（工作区未记录）
  1 记录查询优化　正在用
  2 修复时区处理…
  3 给 CI 加缓存
────────────────────────────────────────────────────────────────────────────────────────────────────
 ○ 空闲 · 记录查询优化                      ↑↓ 选 · 回车 定 · 打字筛 · tab 换范围 · ← 退 · esc 收起"
`;

exports[`场景 10 · \`/model\`（同一处、同一开合） 列表报条目与模型名（**全量**）；开选择器本身**不进记录区** 1`] = `
"
  █   █  ███   ████ ███  ████    ████  ███  ████  █████
  ██ ██ █   █ █      █  █       █     █   █ █   █ █
  █ █ █ █████ █ ███  █  █       █     █   █ █   █ ████
  █   █ █   █ █   █  █  █       █     █   █ █   █ █
  █   █ █   █  ███  ███  ████    ████  ███  ████  █████

────────────────────────────────────────────────────────────────────────────────────────────────────
  1 MiniMax-M3　minimax · 不在最近一次列表里 · 兼容接入
  2 MiniMax-M2　minimax-m2 · 不在最近一次列表里 · 兼容接入
  3 连接供应商
  4 管理连接　2 条连接
  5 刷新模型　现在就去供应商那儿取一遍
 　minimax：还没取过模型
 minimax-m2：还没取过模型
 → 看这条的详情
────────────────────────────────────────────────────────────────────────────────────────────────────
 ○ 空闲 · 修复时区处理… · MiniMax-M3                              ↑↓ 选 · 回车 定 · ← 退 · esc 收起"
`;

exports[`场景 11 · \`/help\`（纯输出型） 输出进记录区（dim 块）；**命令本身不回显** 1`] = `
"
  █   █  ███   ████ ███  ████    ████  ███  ████  █████
  ██ ██ █   █ █      █  █       █     █   █ █   █ █
  █ █ █ █████ █ ███  █  █       █     █   █ █   █ ████
  █   █ █   █ █   █  █  █       █     █   █ █   █ █
  █   █ █   █  ███  ███  ████    ████  ███  ████  █████

· 已换模型 → MiniMax-M2
可用命令
/clear　清屏，另起一条
/resume　回到之前某一条
/rename　改当前这条的名字
/exit　停掉这条会话再退出（只离开＝ctrl+c 两次）
/status　看这一趟用了多少、模型是谁
/model　换模型（列出可用条目，选定即切）
/grants　本工作区的授权：查看 · 撤销
/skills　技能：浏览 · 搜索 · 选定
/mcp　外部工具服务器：状态 · 工具 · 重连
/attachments　送过的图片：查看原图 · 加入本次输入
/help　这张表
────────────────────────────────────────────────────────────────────────────────────────────────────
 › 交代一件事，回车发送
────────────────────────────────────────────────────────────────────────────────────────────────────
 ○ 空闲 · 时区修正 · MiniMax-M2                                                / 命令 · ctrl+c 退出"
`;

exports[`场景 12 · 切换 / 恢复后——重建，且是收拢的 条目重建出记录区；工具两条并一行；屏上痕迹不回 1`] = `
"
  █   █  ███   ████ ███  ████    ████  ███  ████  █████
  ██ ██ █   █ █      █  █       █     █   █ █   █ █
  █ █ █ █████ █ ███  █  █       █     █   █ █   █ ████
  █   █ █   █ █   █  █  █       █     █   █ █   █ █
  █   █ █   █  ███  ███  ████    ████  ███  ████  █████

› 看看这个工作区里有什么

⏺ 我先列一下。

● ls {"path":"."}
  ✓ 14 项

⏺ 是个 Bun 工作区，packages 下六个包。
────────────────────────────────────────────────────────────────────────────────────────────────────
 › 交代一件事，回车发送
────────────────────────────────────────────────────────────────────────────────────────────────────
 ○ 空闲 · 时区修正                                                             / 命令 · ctrl+c 退出"
`;

exports[`场景 13 · 退避重试 状态词换 \`● 正在重试 2/3\`，右位报「几秒后重发」；输入行说实话 1`] = `
"
  █   █  ███   ████ ███  ████    ████  ███  ████  █████
  ██ ██ █   █ █      █  █       █     █   █ █   █ █
  █ █ █ █████ █ ███  █  █       █     █   █ █   █ ████
  █   █ █   █ █   █  █  █       █     █   █ █   █ █
  █   █ █   █  ███  ███  ████    ████  ███  ████  █████

────────────────────────────────────────────────────────────────────────────────────────────────────
 › （等模型回来——不用管，退避重试会自动重发）
────────────────────────────────────────────────────────────────────────────────────────────────────
 ● 正在重试 2/3 · 时区修正                                                     1.6s 后重发 · 不用管"
`;

exports[`场景 14 · 窄窗口降级 从右往左省（用量 → 模型 → 标题截断）；**省了不改剩余字段的位置** 1`] = `
"
  Magic Code

› 看看这个工作区里有什么

⏺ 我先列一下。

● ls {"path":"."}
  ✓ 200ms · 14 项

⏺ 是个 Bun 工作区，packages 下六个包。
──────────────────────────────────────────────
 › 交代一件事，回车发送
──────────────────────────────────────────────
 ○ 空闲 · 记录查询优化   / 命令 · ctrl+c 退出"
`;

exports[`规格细节（渲染层） **收拢**：更早的组并成一行摘要，**末尾五组**逐条展开（原型 · 场景 12 ＋ 缺陷 D18） 1`] = `
"
  █   █  ███   ████ ███  ████    ████  ███  ████  █████
  ██ ██ █   █ █      █  █       █     █   █ █   █ █
  █ █ █ █████ █ ███  █  █       █     █   █ █   █ ████
  █   █ █   █ █   █  █  █       █     █   █ █   █ █
  █   █ █   █  ███  ███  ████    ████  ███  ████  █████

› 看看有什么

● 3 次工具调用（ls · read · grep）

⏺ 看完了。

● 2 次工具调用（write · edit）

⏺ 改完了。

● ls {}
  ✓ 1 项

⏺ 再看。

● ls {}
  ✓ 1 项

⏺ 继续。

● ls {}
  ✓ 1 项

⏺ 继续。

● ls {}
  ✓ 1 项

⏺ 继续。

● cat {}
  ✓ 成

⏺ 完了。
────────────────────────────────────────────────────────────────────────────────────────────────────
 › 交代一件事，回车发送
────────────────────────────────────────────────────────────────────────────────────────────────────
 ○ 空闲 · 时区修正                                                             / 命令 · ctrl+c 退出"
`;

exports[`场景 11 · slash 自动补全 打 \`/s\` —— 候选列在输入行**上方**，前缀命中（\`/skills\` · \`/status\`）在前 1`] = `
"
  █   █  ███   ████ ███  ████    ████  ███  ████  █████
  ██ ██ █   █ █      █  █       █     █   █ █   █ █
  █ █ █ █████ █ ███  █  █       █     █   █ █   █ ████
  █   █ █   █ █   █  █  █       █     █   █ █   █ █
  █   █ █   █  ███  ███  ████    ████  ███  ████  █████

────────────────────────────────────────────────────────────────────────────────────────────────────
› /skills　技能：浏览 · 搜索 · 选定
  /status　看这一趟用了多少、模型是谁
  /attachments　送过的图片：查看原图 · 加入本次输入
  /grants　本工作区的授权：查看 · 撤销
  /resume　回到之前某一条
 › /s
────────────────────────────────────────────────────────────────────────────────────────────────────
 ○ 空闲 · 记录查询优化                                                  ↑↓ 选 · Tab 补全 · esc 收起"
`;
